Recipes can be edit now

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,13 +23,17 @@
       <ul class="dropdown-menu">
         <li>
           <a (click)="onAddToShoppingList()" style="cursor: pointer;"
-            >Add Ingredients</a
+            >Add to Shopping List</a
           >
         </li>
         <li>
           <a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a>
         </li>
-        <li><a style="cursor: pointer;">Delete Recipe</a></li>
+        <li>
+          <a style="cursor: pointer;" (click)="onDeleteRecipe()"
+            >Delete Recipe</a
+          >
+        </li>
       </ul>
     </div>
   </div>
