--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,8 +1,5 @@
 <div class="row">
   <div class="col-xs-12 col-md-4 col-md-offset-3">
-    <!-- <div class="alert alert-danger" *ngIf="error">
-      <p>{{ error }}</p>
-    </div> -->
     <app-alert
       [message]="error"
       *ngIf="error"
@@ -13,7 +10,7 @@
     </div>
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
       <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email">{{ "auth.email" | translate }}</label>
         <input
           type="email"
           id="email"
@@ -25,7 +22,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
+        <label for="password">{{ "auth.password" | translate }}</label>
         <input
           type="password"
           id="password"
@@ -41,12 +38,22 @@
           class="btn btn-primary"
           type="submit"
           [disabled]="!authForm.valid"
+          translate
         >
-          {{ isLoginMode ? "Login" : "Sign Up" }}
+          {{
+            isLoginMode
+              ? ("auth.login" | translate)
+              : ("auth.signup" | translate)
+          }}
         </button>
         |
         <button class="btn btn-primary" type="button" (click)="onSwitchMode()">
-          Switch to {{ isLoginMode ? "Sign Up" : "Login" }}
+          {{ "auth.switchTo" | translate }}
+          {{
+            isLoginMode
+              ? ("auth.signup" | translate)
+              : ("auth.login" | translate)
+          }}
         </button>
       </div>
     </form>
