--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -18,21 +18,23 @@
   <div class="col-xs-12">
     <div class="btn-group" appDropdown>
       <button type="button" class="btn btn-primary dropdown-toggle">
-        Manage Recipe <span class="caret"></span>
+        {{ "recipes.manageRecipe" | translate }} <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
         <li>
-          <a (click)="onAddToShoppingList()" style="cursor: pointer;"
-            >Add to Shopping List</a
-          >
+          <a (click)="onAddToShoppingList()" style="cursor: pointer;">{{
+            "recipes.addToShoppingList" | translate
+          }}</a>
         </li>
         <li>
-          <a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a>
+          <a style="cursor: pointer;" (click)="onEditRecipe()">{{
+            "recipes.editRecipe" | translate
+          }}</a>
         </li>
         <li>
-          <a style="cursor: pointer;" (click)="onDeleteRecipe()"
-            >Delete Recipe</a
-          >
+          <a style="cursor: pointer;" (click)="onDeleteRecipe()">{{
+            "recipes.deleteRecipe" | translate
+          }}</a>
         </li>
       </ul>
     </div>
