--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -3,7 +3,7 @@
     <form (ngSubmit)="onAddItem(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
-          <label for="name">Name</label>
+          <label for="name">{{ "shoppingList.name" | translate }}</label>
           <input
             type="text"
             id="name"
@@ -14,7 +14,7 @@
           />
         </div>
         <div class="col-sm-2 form-group">
-          <label for="amount">Amount</label>
+          <label for="amount">{{ "shoppingList.amount" | translate }}</label>
           <input
             type="number"
             id="amount"
@@ -30,7 +30,11 @@
       <div class="row">
         <div class="col-xs-12">
           <button class="btn btn-success" type="submit" [disabled]="!f.valid">
-            {{ editMode ? "Update" : "Add" }}
+            {{
+              editMode
+                ? ("shoppingList.update" | translate)
+                : ("shoppingList.add" | translate)
+            }}
           </button>
           <button
             class="btn btn-danger"
@@ -38,10 +42,10 @@
             (click)="onDeleteItem()"
             [disabled]="!editMode"
           >
-            Delete
+            {{ "shoppingList.delete" | translate }}
           </button>
           <button class="btn btn-primary" type="button" (click)="onClear()">
-            Clear
+            {{ "shoppingList.clear" | translate }}
           </button>
         </div>
       </div>
